Fixed some alignment issue in the mobile view

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,6 +6,7 @@ html,
 body,
 #root {
   height: 100%;
+  height: 100dvh;
 }
 
 .str-chat__channel {
